# EbsdLib

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LaueNotes.md  README.md  vcpkg-configuration.json  vcpkg.json
.azure/pipelines/: azure-pipelines.yml
.github/workflows/: linux.yml
Data/EbsdTestFiles/: EdaxAngOnly.h5  Out_Of_Order(1).tiff  Out_Of_Order.ang  Test_HeaderCache-1.ang  Test_HeaderCache-2.ang
Data/IPF_Legend/: Trigonal -3m (D3d).tiff  Trigonal -3m (D3d)_FULL.tiff  quats_000_1_deg.txt
Data/IPF_Legend/Cubic m-3 (Th)/: Cubic m-3 (Th).tiff  Cubic m-3 (Th)_FULL.tiff  [001]_pole_figure.tiff  [011]_pole_figure.tiff  [111]_pole_figure.tiff  ipf_test_image_0_0_1_Red.tiff  ipf_test_image_0_1_1_Blue.tiff  ipf_test_image_0_1_2_Pink.tiff  ipf_test_image_1_0_1_Green.tiff  ipf_test_image_1_0_2_Yellow.tiff  ipf_test_image_1_1_1_Aqua.tiff  ipf_test_image_1_1_2_Flesh.tiff
Data/IPF_Legend/Cubic m-3m (Oh)/: <111>_pole_figure.tiff  Cubic m-3m (Oh).tiff  Cubic m-3m (Oh)_FULL.tiff  [011]_pole_figure.tiff  ipf_test_image_0_0_1_Red.tiff  ipf_test_image_0_1_1_Green.tiff  ipf_test_image_0_2_1_Yellow.tiff  ipf_test_image_1_1_1_Blue.tiff  ipf_test_image_1_1_2_Pink.tiff  ipf_test_image_1_2_2_Aqua.tiff
Data/IPF_Legend/Hexagonal 6_m (C6h)/: Hexagonal 6_m (C6h).tiff  Hexagonal 6_m (C6h)_FULL.tiff  [11-20]_pole_figure.tiff  [2-1-10]_pole_figure.tiff  ipf_test_image_0_0_1_Red.tiff  ipf_test_image_1_0_0_Green.tiff  ipf_test_image_1_0_1_Yellow.tiff  ipf_test_image_1_1_0_Blue.tiff  ipf_test_image_2_1_0_Aqua.tiff  ipf_test_image_2_1_2_Flesh.tiff
Data/IPF_Legend/Hexagonal 6_mmm (D6h)/: Hexagonal 6_mmm (D6h).tiff  Hexagonal 6_mmm (D6h)_FULL.tiff  [0001]_pole_figure.tiff  [10-10]_pole_figure.tiff  [2-1-10]_pole_figure.tiff  ipf_test_image_0_0_1_Red.tiff  ipf_test_image_1_0_0_Green.tiff  ipf_test_image_1_0_1_Yellow.tiff  ipf_test_image_2_1_0_Blue.tiff  ipf_test_image_2_1_2_Pink.tiff  ipf_test_image_4_1_0_Aqua.tiff
Data/IPF_Legend/Hexagonal 6|m (C6h)/: ipf_test_image_0_0_1_Red.tiff  ipf_test_image_1_0_0_Green.tiff  ipf_test_image_1_1_0_Blue.tiff
Data/IPF_Legend/Hexagonal 6|mmm (D6h)/: <0001>_pole_figure.tiff  <10-10>_pole_figure.tiff  ipf_test_image_1_0_0_Green.tiff  ipf_test_image_2_1_2_Pink.tiff  ipf_test_image_4_1_0_Aqua.tiff
Data/IPF_Legend/Monoclinic 2_m (C2h)/: Monoclinic 2_m (C2h)_FULL.tiff  [001]_pole_figure.tiff  ipf_test_image_-1_-1_1_Pink.tiff  ipf_test_image_-1_0_0_Blue.tiff  ipf_test_image_0_0_1_Red.tiff  ipf_test_image_0_1_0_Aqua.tiff  ipf_test_image_1_1_1_Yellow.tiff
Data/IPF_Legend/Monoclinic 2|m (C2h)/: Monoclinic 2|m (C2h).tiff
Data/IPF_Legend/Orthorhombic mmm (D2h)/: Orthorhombic mmm (D2h).tiff  Orthorhombic mmm (D2h)_FULL.tiff  [100]_pole_figure.tiff  ipf_test_image_0_0_1_Red.tiff  ipf_test_image_0_1_0_Blue.tiff  ipf_test_image_0_1_1_Pink.tiff  ipf_test_image_1_0_0_Green.tiff  ipf_test_image_1_0_1_Yellow.tiff  ipf_test_image_1_1_0_Aqua.tiff  ipf_test_image_1_1_1_Flesh.tiff
Data/IPF_Legend/Tetragonal 4_m (C4h)/: Tetragonal 4_m (C4h)_FULL.tiff  [010]_pole_figure.tiff  ipf_test_image_0_0_1_Red.tiff  ipf_test_image_0_1_0_Blue.tiff  ipf_test_image_0_1_1_Yellow.tiff  ipf_test_image_1_0_0_Green.tiff  ipf_test_image_1_0_1_Pink.tiff  ipf_test_image_1_1_0_Aqua.tiff
Data/IPF_Legend/Tetragonal 4_mmm (D4h)/: Tetragonal 4_mmm (D4h)_FULL.tiff  [100]_pole_figure.tiff  [110]_pole_figure.tiff  ipf_test_image_0_0_1_Red.tiff  ipf_test_image_1_0_0_Green.tiff  ipf_test_image_1_0_1_Yellow.tiff  ipf_test_image_1_1_0_Blue.tiff  ipf_test_image_1_1_1_Pink.tiff  ipf_test_image_1_2_3_Flesh.tiff  ipf_test_image_2_1_0_Aqua.tiff
Data/IPF_Legend/Tetragonal 4|m (C4h)/: Tetragonal 4|m (C4h).tiff  Tetragonal 4|m (C4h)_FULL.tiff  ipf_test_image_0_1_0_Blue.tiff  ipf_test_image_1_0_1_Pink.tiff
Data/IPF_Legend/Tetragonal 4|mmm (D4h)/: <110>_pole_figure.tiff  Tetragonal 4|mmm (D4h).tiff  Tetragonal 4|mmm (D4h)_FULL.tiff
Data/IPF_Legend/Triclinic -1 (Ci)/: Triclinic -1 (Ci).tiff  Triclinic -1 (Ci)_FULL.tiff  [010]_pole_figure.tiff  ipf_test_image_0_1_0_Aqua.tiff  ipf_test_image_0_1_1_Flesh.tiff  ipf_test_image_1_0_0_Green.tiff
Data/IPF_Legend/Trigonal -3 (C3i)/: <2-1-10>_pole_figure.tiff  Trigonal -3 (C3i).tiff  Trigonal -3 (C3i)_FULL.tiff  [-1-120]_pole_figure.tiff  [0001]_pole_figure.tiff  ipf_test_image_-1_-1_0_Green.tiff  ipf_test_image_0_-1_1_Yellow.tiff  ipf_test_image_0_0_1_Red.tiff  ipf_test_image_1_-2_0_Aqua.tiff  ipf_test_image_1_-2_2_Flesh.tiff  ipf_test_image_1_0_0_Blue.tiff  ipf_test_image_2_-1_2_Pink.tiff
Data/IPF_Legend/Trigonal -3m (D3d)/: <0-110>_pole_figure.tiff  Trigonal -3m (D3d).tiff  Trigonal -3m (D3d)_FULL.tiff  (+9 more)
Docs/: Index.md  trigonal_sym_eq.md
Source/Apps/: ConvertOrientations.cpp  ParseAztecProject.cpp  SourceList.cmake  gen_sym_code.cpp  generate_ipf_legends.cpp  make_ipf.cpp  rearrange.cpp  rotconvert.cpp
Source/EbsdLib/: CMakeLists.txt  EbsdLibConfiguration.h.in  SourceList.cmake
Source/H5Support/: CMakeLists.txt  H5Lite.cpp  H5Lite.h  H5Macros.h  H5ScopedErrorHandler.cpp  H5ScopedErrorHandler.h  H5ScopedSentinel.cpp  H5ScopedSentinel.h  H5SupportConfiguration.h.in  H5Utilities.cpp  H5Utilities.h  QH5Lite.cpp  QH5Lite.h  QH5Utilities.cpp  QH5Utilities.h
Source/Test/: AngImportTest.cpp  AngleFileLoaderTest.cpp  CMakeLists.txt  CtfReaderTest.cpp  EdaxOIMReaderTest.cpp  GenerateFunctionList.h  H5EspritReaderTest.cpp  H5OINAReaderTest.cpp  IPFLegendTest.cpp  Misorientation.cpp  ODFTest.cpp  OrientationArrayTest.cpp  OrientationConverterTest.cpp  OrientationLibTest.cpp  OrientationMathTest.cpp  OrientationTest.cpp  OrientationTransformationTest.cpp  OrientationTransformsTest.cpp  QuaternionTest.cpp  SO3SamplerTest.cpp  TestFileLocations.h.in  TestMain.cpp.in  TestPrintFunctions.h  TextureTest.cpp  UnitTestSupport.hpp
Test/ProjectTest/: CMakeLists.txt  ebsdlib_external_project_test.cpp
cmake/: EbsdLibMacros.cmake  HDF5Support.cmake  Packaging.cmake  TBBSupport.cmake  cmpVersion.cpp.in  cmpVersion.h.in
pyebsd/: LICENSE.txt  README.md  setup.py
pyebsd/ebsd/: __init__.py  _utils.py  ang.py  ctf.py
(+165 files in other folders)
